# yt-dlp-ui

./: README.md  SPECIFICATION.md  design.pen  index.html  install.sh  package.json  tsconfig.json
.github/workflows/: release.yml
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  installer.rs  lib.rs  models.rs
src-tauri/src/downloader/: manager.rs  mod.rs  task.rs
src-tauri/src/storage/: mod.rs
src/components/: DownloadInput.tsx  DownloadItem.tsx  DownloadList.tsx  DownloadView.tsx  HistoryView.tsx  Layout.tsx  SettingsView.tsx  Sidebar.tsx
src/lib/: tauri.ts  types.ts
src/stores/: downloadStore.ts  historyStore.ts  settingsStore.ts  themeStore.ts
